Changing game start
From key press to button push

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
         <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-lg-10 information">
-                <p><h1><center>PRESS "S" TO <b>S</b>TART!</center></h1></p>
                 <p>This is the GEM GUESSER game! Each one of the four "gems" holds a certain random number (the first gem is lowest, the last gem is highest, but the numbers are random). You will have a target number to reach each time the game is played. Each time you click a gem, your own number will go up, until you either reach the target, or go over and lose! When you win or lose, a new number will appear for you to guess, and the gems will have different values!</p>
-                <p>Have fun!</p>
-                <p><h1><center>PRESS "S" TO <b>S</b>TART!</center></h1></p>
+                <p>Have fun!  PRESS START TO BEGIN!</p>
+                <p><center><button id="startbtn" onclick="start()" class="btn btn-success">START</button></center></p>
             </div>
             <div class="col-sm-1"></div>
         </div>
